# bit

./: .gitignore  CMakeLists.txt  Makefile  README.org  arguments.cpp  arguments.hpp  bit.cpp  error.cpp  install.sh  parser.cpp
.cache/clangd/index/: arguments.cpp.A5248031512CB5B1.idx  arguments.hpp.527E704F358FEFAA.idx  bit.cpp.7F091D1E54074C3D.idx  error.cpp.8ABF00D4E823A046.idx  error.hpp.84ED662B0C342A6D.idx  parser.cpp.5C1CBEFCA804B160.idx  parser.hpp.4764F83E60A0ACBC.idx
docs/: BUILD.org  CHANGELOG.org  RELEASE.org  contribution.org  index.html  reference.org
docs/css/: styles.css
docs/js/: script.js
docs/website/: index.html
docs/website/css/: styles.css
docs/website/js/: script.js
includes/: arguments.hpp  error.hpp  parser.hpp
scripts/: clean.sh  dev-clean.sh  dev.sh  install-clean.sh  install.sh  stable-clean.sh  stable.sh  uninstall.sh
src/: bit.cpp  error.cpp  parser.cpp
test/test1/: app  build.bit  main.c
test/test2/: app  build.bit  main.c
test/test3/: build.bit  main  main.c  main.h
